--- a/İndex.html
+++ b/İndex.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OTO MUAMMER - Profesyonel Oto Servis & Bakım</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- Header -->
