--- a/İndex.html
+++ b/İndex.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OTO MUAMMER - Profesyonel Oto Servis & Bakım</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Header -->
@@ -130,4 +130,5 @@
   <!-- Toast -->
   <div id="toast">Randevunuz başarıyla alındı!</div>
 </body>
+    <script src="script.js"></script>
   </html>
